2002-12-14	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* timer/Makefile.am: Don't include @RTEMS_BSP@.cfg.
	* clock/Makefile.am: Don't include @RTEMS_BSP@.cfg.

2002-12-06	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove RTEMS_CHECK_BSP_CACHE.

2002-12-01	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Add RTEMS_PROG_CCAS.

2002-11-03	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* mongoosev/Makefile.am: TMPINSTALL_FILES -> PREINSTALL_FILES.

2002-11-02	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* mongoosev/Makefile.am: Merge-in mongoosev/include/Makefile.am.
	Install include/mongoose-v.h.
	* mongoosev/include/Makefile.am: Remove.
	* configure.ac: Reflect changes above.

2002-11-01	Joel Sherrill <joel@OARcorp.com>

	* shared/interrupts/installisrentries.c,
	shared/interrupts/vectorexceptions.c: Removed warnings.

2002-10-21	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* .cvsignore: Reformat.
	Add autom4te*cache.
	Remove autom4te.cache.

2002-09-08	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac: Remove duplicate timer/Makefile from CONFIG_FILES.

2002-08-11	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* clock/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* mongoosev/duart/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* mongoosev/vectorisrs/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* r46xx/vectorisrs/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* shared/cache/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* shared/interrupts/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* timer/Makefile.am: Use .$(OBJEXT) instead of .o.
 	* tx39/vectorisrs/Makefile.am: Use .$(OBJEXT) instead of .o.

2002-08-09	Joel Sherrill <joel@OARcorp.com>

	* shared/interrupts/isr_entries.S: Corrected typo in mips1 
	END_FRAME directive that lead to linker errors.

2002-03-27	Ralf Corsepius <corsepiu@faw.uni-ulm.de>

	* configure.ac:
	AC_INIT(package,_RTEMS_VERSION,_RTEMS_BUGS).
	AM_INIT_AUTOMAKE([no-define foreign 1.6]).
	* clock/Makefile.am: Remove AUTOMAKE_OPTIONS.